2004-08-18	blytkerchan
	* rh_default.php: randomly pick the png between two candidates

2004-05-27	blytkerchan
	* tech_arch.php: fix the link to the progress page
	make the toolset header an h2

2004-05-20	blytkerchan
	* how_you_can_help.php: add words on *how* you can help

2004-05-19	blytkerchan
	* ChangeLog: new file
	* design.php: ditto
	* development.php: ditto
	* download.php: ditto
	* goals.php: ditto
	* how_you_can_help.php: ditto
	* jailop.php: ditto
	* jailtype.php: ditto
	* language.php: ditto
	* libcontain.php: ditto
	* libmemory.php: ditto
	* license.php: ditto
	* progress.php: ditto
	* rh_default.php: ditto
	* rh_libcontain.php: ditto
	* rh_libmemory.php: ditto
	* tech_arch.php: ditto
	* welcome.php: ditto