@@ -34,7 +34,7 @@ light your cigare with a battleship and blow your nose off).</p>
 the Jewish olive tree). As in information/computer science, we often talk
 about trees and forests when there is a hierarchy to be constructed, the link
 suddenly became obvious: if we have a tree of objects that all inherit from
-Item (the Adam-object), that doesn't mean that all objectss are compatible
+Item (the Adam-object), that doesn't mean that all objects are compatible
 with eachother: someone may well have cut off a branch and planted it as a
 separate tree. In effect, any object may have become the root of a new tree
 at some point!</p>
@@ -62,10 +62,13 @@ something else) there is no reason why it should destroy the object.</li>
 an instance of the class<br/>
 This basically means that if you change some attribute in one object, the same
 attribute in another object is not changed</li>
-<li>every object is executable<br/>
+<li>an object may be executable<br/>
 In the Jail model, even functions are objects - as are statements. This 
 basically means you can assign a block of code to a variable without executing
-the block of code.</li>
+the block of code.<br/>
+Whether the object actually is executable would depend only on the access 
+rights you have on the object - which means there should be some way to define
+those.</li>
 <li>every object is an abstraction of data<br/>
 This basically means that even functions are abstractions of some data. In the
 case of a function, that data is the compiler-generated bytecode. This implies
