@@ -1,3 +1,6 @@
+2004-08-19	blytkerchan
+	* jailtype.php: update the general reflection on types
+
 2004-08-18	blytkerchan
 	* rh_default.php: randomly pick the png between two candidates
 
